# Payload-Server

./: LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
src/payload_server/: cli.py
tests/: test_cli.py
