[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payload-server"
version = "0.1.0"
description = "Serve local payload directories and generate transfer-ready HTTP or SMB targets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cameron Candau" }
]
license = { file = "LICENSE" }
keywords = ["payloads", "http", "smb", "pentest", "oscp"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: GPL License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/CameronCandau/payload-server"
Repository = "https://github.com/CameronCandau/payload-server"
Issues = "https://github.com/CameronCandau/payload-server/issues"

[project.scripts]
payload-server = "payload_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
